working setting and radio groups

--- a/app/src/main/res/layout/activity_contact_map.xml
+++ b/app/src/main/res/layout/activity_contact_map.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/buttonSave"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactMapActivity">
+    android:background="@android:color/white"
+    android:fitsSystemWindows="true">
+    <!-- Toolbar with Toggle & Save Button -->
+
+    <!-- Contact Information Fields -->
 
     <LinearLayout
+        android:id="@+id/bottomNavigationBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/navbar_background"
+        android:background="@android:color/black"
         android:orientation="horizontal"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
-            android:id="@+id/imageButtonList"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnContacts"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="@string/a_button_to_display_a_list_of_contacts"
-            app:srcCompat="@drawable/contactlisticon" />
+            android:background="@android:color/white"
+            android:src="@drawable/contactlisticon" />
 
         <ImageButton
-            android:id="@+id/imageButtonMap"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnMap"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="@string/a_button_to_display_a_map_of_contact_s_address"
-            app:srcCompat="@drawable/mapicon" />
+            android:background="@android:color/white"
+            android:src="@drawable/mapicon" />
 
         <ImageButton
-            android:id="@+id/imageButtonSetting"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnSettings"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="@a_string/button_to_display_settings_for_contacts"
-            app:srcCompat="@drawable/settingsicon" />
+            android:background="@android:color/white"
+            android:src="@drawable/settingsicon" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
