--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -296,6 +296,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.051"
+                android:inputType="text"
                 app:layout_constraintStart_toEndOf="@+id/textBDay"
                 app:layout_constraintTop_toBottomOf="@+id/editEmail"
                 app:layout_constraintVertical_bias="0.63" />
