--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="navbar_background">#1a1a48</color>
     <color name="toolbar_background">#bebebe</color>
     <color name="dialogue_button_color">#26C6DA</color>
+    <color name="system_red">#ff0000</color>
+    <color name="system_transparent">#00000000</color>
+    <color name="system_blue">#0000ff</color>
+
 </resources>
